<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.viadee</groupId>
	<artifactId>viadeeProcessApplicationValidator</artifactId>

	<version>2.8.1-SNAPSHOT</version>

	<name>viadee Process Application Validator</name>

	<description>The tool checks Camunda projects for consistency and discovers errors in process-driven applications. 
	Called as a JUnit test, it discovers esp. inconsistencies of a given BPMN model in the classpath and the 
	sourcecode of an underlying java project, such as a delegate reference to a non-existing java class or a non-existing Spring bean.
  	</description>

	<url>https://github.com/viadee/vPAV</url>

	<licenses>
		<license>
			<name>BSD-3 Clause</name>
			<url>https://opensource.org/licenses/BSD-3-Clause</url>
		</license>
	</licenses>


	<organization>
		<name>viadee Unternehmensberatung AG</name>
		<url>http://www.viadee.de</url>
	</organization>

	<developers>
		<developer>
			<name>Frank Koehne</name>
			<email>Frank.Koehne@viadee.de</email>
			<organization>viadee Unternehmensberatung AG</organization>
			<organizationUrl>http://www.viadee.de</organizationUrl>
		</developer>
		<developer>
			<name>Claus Usener</name>
			<email>Claus-Alexander.Usener@viadee.de</email>
			<organization>viadee Unternehmensberatung AG</organization>
			<organizationUrl>http://www.viadee.de</organizationUrl>
		</developer>
		<developer>
			<name>Marcel Flasskamp</name>
			<email>Marcel.Flasskamp@viadee.de</email>
			<organization>viadee Unternehmensberatung AG</organization>
			<organizationUrl>http://www.viadee.de</organizationUrl>
		</developer>
		<developer>
			<name>Sascha Di Bernardo</name>
			<email>Sascha.DiBernardo@viadee.de</email>
			<organization>viadee Unternehmensberatung AG</organization>
			<organizationUrl>http://www.viadee.de</organizationUrl>
		</developer>
		<developer>
			<name>Petra Horvath</name>
			<email>Petra.Horvath@viadee.de</email>
			<organization>viadee Unternehmensberatung AG</organization>
			<organizationUrl>http://www.viadee.de</organizationUrl>
		</developer>
		<developer>
			<name>Lars Beyer</name>
			<email>Lars.Beyer@viadee.de</email>
			<organization>viadee Unternehmensberatung AG</organization>
			<organizationUrl>http://www.viadee.de</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://https://github.com/viadee/vPAV.git</connection>
		<developerConnection>scm:git:ssh://github.com:viadee/vPAV.git</developerConnection>
		<url>https://github.com/viadee/vPAV/tree/master</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<spring.version>5.1.1.RELEASE</spring.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.cronutils</groupId>
			<artifactId>cron-utils</artifactId>
			<version>7.0.6</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.10.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>3.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>3.5.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.23.0</version>
		</dependency>
		<dependency>
			<groupId>org.camunda.bpm</groupId>
			<artifactId>camunda-engine</artifactId>
			<version>7.9.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>commons-email</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.5.4</version>
		</dependency>
		<dependency>
			<groupId>de.odysseus.juel</groupId>
			<artifactId>juel</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.4.15</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<dependency>
			<groupId>net.time4j</groupId>
			<artifactId>time4j-range</artifactId>
			<version>4.33</version>
		</dependency>
		<dependency>
			<groupId>ca.mcgill.sable</groupId>
			<artifactId>soot</artifactId>
			<version>3.2.0</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
					<executions>
						<execution>
							<goals>
								<goal>deploy</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<header>src/main/resources/BSD3-license.txt</header>
					<properties>
						<owner>viadee Unternehmensberatung AG</owner>
						<inceptionYear>2019</inceptionYear>
						<email>Frank.Koehne@viadee.de</email>
					</properties>
					<excludes>
						<exclude>**/README</exclude>
						<exclude>src/test/resources/**</exclude>
						<exclude>src/main/resources/**</exclude>
						<exclude>src/main/resources-filtered/**</exclude>
						<exclude>docs/**</exclude>
						<exclude>src/main/java/**/*.properties</exclude>
						<exclude>*.xml</exclude>
						<exclude>*.yml</exclude>
						<exclude>*.log</exclude>
						<exclude>*.pmd</exclude>
						<exclude>LICENSE.txt</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>Check licenses</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
					<execution>
						<id>Insert or update license</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.6</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>4.0.2</version>
				<configuration>
					<suppressionFiles>
						<suppressionFile>owasp-dependency-check-suppressions.xml</suppressionFile>
					</suppressionFiles>
					<failBuildOnCVSS>7</failBuildOnCVSS>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
   				<groupId>org.jacoco</groupId>
   				<artifactId>jacoco-maven-plugin</artifactId>
   				<version>0.8.2</version>
   				<executions>
			        <execution>
			            <goals>
			                <goal>prepare-agent</goal>
			            </goals>
			        </execution>
			        <execution>
			            <id>report</id>
			            <phase>prepare-package</phase>
			            <goals>
			                <goal>report</goal>
			            </goals>
			        </execution>
			    </executions>
     			</plugin>	
		</plugins>
	</build>

	<reporting>
		<excludeDefaults>true</excludeDefaults>
		<outputDirectory>${project.build.directory}/site</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependencies</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<distributionManagement>
		<site>
			<id>website</id>
			<url>file://${basedir}/docs/MavenSite</url>
		</site>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>
</project>
